--- a/angular-frontend/src/app/components/supplement-detail/supplement-detail.component.scss
+++ b/angular-frontend/src/app/components/supplement-detail/supplement-detail.component.scss
@@ -158,6 +158,7 @@
       text-transform: uppercase;
       letter-spacing: 1px;
       font-size: 1.1rem;
+      cursor: pointer;
     }
 
     .buy-button:hover {
