--- a/angular-frontend/src/app/components/checkout/checkout.component.html
+++ b/angular-frontend/src/app/components/checkout/checkout.component.html
@@ -1,3 +1,5 @@
+<app-cart-resume></app-cart-resume>
+
 <form (ngSubmit)="onSubmit(buyerForm)" #buyerForm="ngForm">
   <!-- 🛒 Buyer Info -->
   <section class="form-section buyer-info">
