--- a/angular-frontend/src/app/components/product-search-card/product-search-card.component.scss
+++ b/angular-frontend/src/app/components/product-search-card/product-search-card.component.scss
@@ -9,6 +9,7 @@
     background-color: #fff;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     margin-bottom: 12px; /* To give space between cards */
+    cursor: pointer;
   }
   
   .supplement-image {
