--- a/angular-frontend/src/app/components/navbar/navbar.component.html
+++ b/angular-frontend/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,8 @@
         (focus)="onSearchFocus()"
         [(ngModel)]="searchQuery"
         (input)="filterProducts()"  
-        (click)="onSearchInputClick($event)"  
+        (click)="onSearchInputClick($event)"
+        (keydown.enter)="onSearchIconClick($event)"  
       /> 
     
       <!-- Close Icon (click to toggle) -->
@@ -48,7 +49,7 @@
       <div class="mobile-search-overlay" [class.active]="isMobileSearchActive">
         <div class="mobile-search-header">
           <span class="icon search-icon" style="position: absolute; right: 60px;">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
+            <svg (click)="onSearchIconClick($event)" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
               <path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/>
             </svg>
           </span>
@@ -57,6 +58,7 @@
             placeholder="Search..."
             (input)="filterProducts()"
             [(ngModel)]="searchQuery"
+            (keydown.enter)="onSearchIconClick($event)" 
             autofocus
           />
           <button class="icon close-icon" (click)="closeMobileSearch()">
