working on the backend

--- a/angular-frontend/src/app/components/checkout/checkout.component.html
+++ b/angular-frontend/src/app/components/checkout/checkout.component.html
@@ -3,7 +3,7 @@
 <form (ngSubmit)="onSubmit(buyerForm)" #buyerForm="ngForm">
   <!-- 🛒 Buyer Info -->
   <section class="form-section buyer-info">
-    <h3>Buyer Information</h3>
+    <h3>Information</h3>
 
     <div class="form-group">
       <label for="company">Company (optional)</label>
