Fix image path for logo

--- a/angular-frontend/src/app/components/navbar/navbar.component.html
+++ b/angular-frontend/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar">
     <!-- Logo -->
       <div class="logo" (click)="navigateToSupps()">
-      <img src="/images/logo.jpg" alt="Logo" />
+      <img src="images/logo.jpg" alt="Logo" />
     </div>
   
     <div class="search-wrapper desktop-search" [ngClass]="{ 'active': isSearchActive }" #searchOverlay>
